--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="image of a lion mid roar"
+    />
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="lion mid roar"
+    title="Lion"/>
   </body>
 </html>
